syntax = "proto3";
package test;

option java_package = "com.dimitrilc.freemediaplayer.data.proto";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

message BottomNavProto {
  State state = 1;

  enum State {
    AUDIO_FOLDERS = 0;
    VIDEOS_FOLDERS = 1;
    PLAYLISTS = 2;
    SETTINGS = 3;
  }
}